Updated to the newest master template.

--- a/QuickTemplate.AspMvc/Views/Home/Index.cshtml
+++ b/QuickTemplate.AspMvc/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     //var controller = ViewContext?.RouteData?.Values["controller"]?.ToString();
     //var action = ViewContext?.RouteData?.Values["action"]?.ToString();
     var title = "Home Page";
-    var text = "Welcome to the HTL-Leonding";
+    var text = "Welcome to the QuickTemplate";
 
     ViewData["Title"] = title;
 
@@ -12,7 +12,7 @@
         <div class="card-body" style="text-align: center;">
             <h1 class="card-title">@text</h1>
             <p class="card-text"></p>
-            <p class="card-text">Learn about <a href="https://www.htl-leonding.at/">computer science</a>.</p>
+            <p class="card-text">Learn about <a href="https://www.indi.systems/">computer science</a>.</p>
             <p class="card-text">Where?</p>
             <p class="card-text"><strong>with us.</strong></p>
         </div>
