--- a/QuickTemplate.AspMvc/Views/Home/Contact.cshtml
+++ b/QuickTemplate.AspMvc/Views/Home/Contact.cshtml
@@ -14,14 +14,14 @@
                 <h1 id="contact">Contact information</h1>
                 <hr />
                 <address>
-                    <strong>HTL-Leonding</strong><br>
-                    Limesstraße 12-14<br>
-                    A-4060 Leonding<br>
-                    <abbr title="Phonenumber">Tel.</abbr> +43 732 67 33 68 – 0
+                    <strong>ISO Individual Systems OG</strong><br>
+                    Europastraße 67<br>
+                    A-4020 Linz<br>
+                    <abbr title="Phonenumber">Tel.</abbr> +43 650 9339331
                     <br />
-                    <abbr title="Email-Adresse">Email</abbr> <a href="mailto:office@htl-leonding.ac.at">office(at)htl-leonding.ac.at</a>
+                    <abbr title="Email-Adresse">Email </abbr> <a href="mailto:office@indi.systems">office(at)indi.systems</a>
                     <br />
-                    <abbr title="Schoolnumber">Schulkennzahl:</abbr>410427<br>
+                    <abbr title="Person">Manager </abbr><strong>Gerhard Gehrer</strong>
                 </address>
             </div>
         </div>
