Changed htl logo.

--- a/QuickTemplate.AspMvc/Views/Home/Contact.cshtml
+++ b/QuickTemplate.AspMvc/Views/Home/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@*@CodeCopy*@
+﻿@*@CustomCode*@
 
 @{
     //var controller = ViewContext?.RouteData?.Values["controller"]?.ToString();
@@ -13,15 +13,16 @@
             <div class="bs-docs-section">
                 <h1 id="contact">Contact information</h1>
                 <hr />
+                <img src="~/img/htl_logo_text.png" class="img-fluid" />
+                <p></p>
                 <address>
-                    <strong>ISO Individual Systems OG</strong><br>
-                    Europastraße 67<br>
-                    A-4020 Linz<br>
-                    <abbr title="Phonenumber">Tel.</abbr> +43 650 9339331
+                    Limesstraße 12-14<br>
+                    A-4060 Leonding<br>
+                    <abbr title="Phonenumber">Tel.</abbr> +43 732 67 33 68 – 0
                     <br />
-                    <abbr title="Email-Adresse">Email </abbr> <a href="mailto:office@indi.systems">office(at)indi.systems</a>
+                    <abbr title="Email-Adresse">Email</abbr> <a href="mailto:office@htl-leonding.ac.at">office(at)htl-leonding.ac.at</a>
                     <br />
-                    <abbr title="Person">Manager </abbr><strong>Gerhard Gehrer</strong>
+                    <abbr title="Schoolnumber">Schulkennzahl:</abbr>410427<br>
                 </address>
             </div>
         </div>
