Updated to the newest master template version.

--- a/QuickTemplate.AspMvc/Views/Identities/_DisplayModel.cshtml
+++ b/QuickTemplate.AspMvc/Views/Identities/_DisplayModel.cshtml
@@ -54,7 +54,7 @@
 
 <h3>Access roles</h3>
 <hr />
-@foreach (var item in Model.AccessRoles.OrderBy(e => e.Designation))
+@foreach (var item in Model.IdentityRoles.OrderBy(e => e.Designation))
 {
     <div class="btn-group" style="margin-bottom: 10px; margin-right: 10px;">
         <a href="#" class="btn btn-outline-primary"><i class="fa-solid fa-hand-point-right"></i></a>
