--- a/QuickTemplate.AspMvc/Views/Shared/_LoginMenu.cshtml
+++ b/QuickTemplate.AspMvc/Views/Shared/_LoginMenu.cshtml
@@ -14,6 +14,10 @@
     var mnuPwdReset = ("Reset password");
     var mnuUser = string.Empty;
 
+#if ACCESSRULES_ON
+    var mnuAccessRules = ("Access-Rules");
+#endif
+
     if (sessionInfo.IsAuthenticated)
     {
         mnuUser = sessionInfo.LoginSession?.Name;
@@ -35,6 +39,9 @@
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentities, "Index", "Identities", routeValues: null, htmlAttributes: null)</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentityUsers, "Index", "IdentityUsers", routeValues: null, htmlAttributes: null)</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentityRoles, "Index", "IdentityRoles", routeValues: null, htmlAttributes: null)</li>
+#if ACCESSRULES_ON
+                            <li class="dropdown-item">@Html.ActionLink(mnuAccessRules, "Index", "AccessRules", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+#endif
                             <li class="dropdown-item">@Html.ActionLink(mnuPwdChange, "ChangePassword", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuPwdReset, "ResetPassword", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
                         }
@@ -43,6 +50,9 @@
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentities, "Index", "Identities", routeValues: null, htmlAttributes: null)</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentityUsers, "Index", "IdentityUsers", routeValues: null, htmlAttributes: null)</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuIdentityRoles, "Index", "IdentityRoles", routeValues: null, htmlAttributes: null)</li>
+#if ACCESSRULES_ON
+                            <li class="dropdown-item">@Html.ActionLink(mnuAccessRules, "Index", "AccessRules", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+#endif
                             <li class="dropdown-item">@Html.ActionLink(mnuPwdChange, "ChangePassword", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
                             <li class="dropdown-item">@Html.ActionLink(mnuPwdReset, "ResetPassword", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
                         }
